--- a/CR-flexion.html
+++ b/CR-flexion.html
@@ -112,8 +112,8 @@
 
 				<!-- Contenedor de imagen -->
 				<div id="imageContainer" class="card mt-2"
-					style="width: 380px; display: flex;	justify-content: center;	align-items: center;">
-					<img id="selectedImage" src="" alt="Sección transversal de la viga" style="width: 100%">
+					style="width: 390px; display: flex;	justify-content: center;	align-items: center;">
+					<img id="selectedImage" src="" alt="Sección transversal de la viga" style="height: 200px">
 				</div>
 
 				<div class="card mt-2" style="width: 100%; display: flex;	justify-content: center;	align-items: center;">
