--- a/CR-flexion.html
+++ b/CR-flexion.html
@@ -113,7 +113,7 @@
 				<!-- Contenedor de imagen -->
 				<div id="imageContainer" class="card mt-2"
 					style="width: 390px; display: flex;	justify-content: center;	align-items: center;">
-					<img id="selectedImage" src="" alt="Sección transversal de la viga" style="height: 200px">
+					<img id="selectedImage" src="./imagenes/viga_subreforzada.PNG" alt="Sección transversal de la viga" style="height: 200px">
 				</div>
 
 				<div class="card mt-2"
