--- a/CR-flexion.html
+++ b/CR-flexion.html
@@ -442,7 +442,7 @@
 
 					// Cargar escenario
 					const loaderEscenario = new THREE.GLTFLoader();
-					loaderEscenario.load('escenario-CR-flexion.gltf', function (gltf) {
+					loaderEscenario.load('CR-flexion-animacion-prueba-001.gltf', function (gltf) {
 						scene.add(gltf.scene);
 					}, undefined, function (error) {
 						console.error(error);
